added artists to menu

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 ---->
 
 <head>
-    <title>Charlotte Street Foundation Open Studios &#124; </title>
+    <title>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <div id="container">
         <header>
-            <h1>Charlotte Street Foundation Open Studios</h1>
+            <h1>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</h1>
             <img src="images/MAP.png" />
         </header>
         <main class="main-content">
@@ -30,14 +30,33 @@
                     <li>Refreshments</li>
 
                     <li>
-                        <li>Katerina Guillermo</li>
-                        <li>Madison Mae Parker</li>
-                        <li>Jessica Ayala</li>
-                        <li>Sheri Hall</li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>1 Katerina Guillermo</li>
+                        <li>2 Madison Mae Parker</li>
+                        <li>3 Jessica Ayala</li>
+                        <li>4 Sheri Hall</li>
+                        <li>6 Lavinia Roberts</li>
+                        <li>7 Kaia Nutting</li>
+                        <li>8 Kevin Kilroy</li>
+                        <li>9 Lilly McElroy</li>
+                        <li>10 Kiki Serna</li>
+                        <li>11 Jessica Kincaid</li>
+                        <li>12 Laurena Roytberg</li>
+                        <li>13 Jason Zeh</li>
+                        <li>14 Tristian Griffin</li>
+                        <li>15 Daniel Hogans</li>
+                        <li>16 KC Public Theatre</li>
+                        <li>17 Mazzy Mann</li>
+                        <li>18 JE Baker</li>
+                        <li>19 Fuko Ito</li>
+                        <li>20 Elizabeth Stehling</li>
+                        <li>21 Alicen Lundberg</li>
+                        <li>22 Luke Haynes</li>
+                        <li>23 Benjamin Wills</li>
+                        <li>24 Iliann Alvarez</li>
+                        <li>25 Elizabeth Derstine</li>
+                        <li>26 Ruben Castillo</li>
+                        <li>27 Bo Hubbard</li>
+                        <li>28 Nazanin Amiri</li>
                     </li>
 
 
