add schedule page

--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
             <img src="images/MAP.png" />
         </header>
         <main class="main-content">
-            <section>
-                <ul>
-                    <li>Schedule of Performances</li>
+            <section class="mapMenu">
+                <ul class="dropdown">
+                    <a href="schedule.html">Schedule of Performances</li>
                     <li>Restrooms</li>
                     <li>Children's Table</li>
                     <li>Refreshments</li>
-
                     <li>
                         <li>1 Katerina Guillermo</li>
                         <li>2 Madison Mae Parker</li>
@@ -58,9 +57,6 @@
                         <li>27 Bo Hubbard</li>
                         <li>28 Nazanin Amiri</li>
                     </li>
-
-
-
                 </ul>
             </section>
         </main>
