create portfolio page, add links

--- a/index.html
+++ b/index.html
@@ -24,39 +24,39 @@
         <main class="main-content">
             <section class="mapMenu">
                 <ul class="dropdown">
-                    <a href="schedule.html">Schedule of Performances</li>
+                    <li><a href="schedule.html">Schedule of Performances</a>
+                    </li>
                     <li>Restrooms</li>
                     <li>Children's Table</li>
                     <li>Refreshments</li>
-                    <li>
-                        <li>1 Katerina Guillermo</li>
-                        <li>2 Madison Mae Parker</li>
-                        <li>3 Jessica Ayala</li>
-                        <li>4 Sheri Hall</li>
-                        <li>6 Lavinia Roberts</li>
-                        <li>7 Kaia Nutting</li>
-                        <li>8 Kevin Kilroy</li>
-                        <li>9 Lilly McElroy</li>
-                        <li>10 Kiki Serna</li>
-                        <li>11 Jessica Kincaid</li>
-                        <li>12 Laurena Roytberg</li>
-                        <li>13 Jason Zeh</li>
-                        <li>14 Tristian Griffin</li>
-                        <li>15 Daniel Hogans</li>
-                        <li>16 KC Public Theatre</li>
-                        <li>17 Mazzy Mann</li>
-                        <li>18 JE Baker</li>
-                        <li>19 Fuko Ito</li>
-                        <li>20 Elizabeth Stehling</li>
-                        <li>21 Alicen Lundberg</li>
-                        <li>22 Luke Haynes</li>
-                        <li>23 Benjamin Wills</li>
-                        <li>24 Iliann Alvarez</li>
-                        <li>25 Elizabeth Derstine</li>
-                        <li>26 Ruben Castillo</li>
-                        <li>27 Bo Hubbard</li>
-                        <li>28 Nazanin Amiri</li>
-                    </li>
+                    <li>1 Katerina Guillermo</li>
+                    <li><a href="profile.html">2 Madison Mae Parker</a></li>
+                    <li>3 Jessica Ayala</li>
+                    <li>4 Sheri Hall</li>
+                    <li>6 Lavinia Roberts</li>
+                    <li>7 Kaia Nutting</li>
+                    <li>8 Kevin Kilroy</li>
+                    <li>9 Lilly McElroy</li>
+                    <li>10 Kiki Serna</li>
+                    <li>11 Jessica Kincaid</li>
+                    <li>12 Laurena Roytberg</li>
+                    <li>13 Jason Zeh</li>
+                    <li>14 Tristian Griffin</li>
+                    <li>15 Daniel Hogans</li>
+                    <li>16 KC Public Theatre</li>
+                    <li>17 Mazzy Mann</li>
+                    <li>18 JE Baker</li>
+                    <li>19 Fuko Ito</li>
+                    <li>20 Elizabeth Stehling</li>
+                    <li>21 Alicen Lundberg</li>
+                    <li>22 Luke Haynes</li>
+                    <li>23 Benjamin Wills</li>
+                    <li>24 Iliann Alvarez</li>
+                    <li>25 Elizabeth Derstine</li>
+                    <li>26 Ruben Castillo</li>
+                    <li>27 Bo Hubbard</li>
+                    <li>28 Nazanin Amiri</li>
+
                 </ul>
             </section>
         </main>
