--- a/profile.html
+++ b/profile.html
@@ -12,13 +12,18 @@
 
 
 <head>
-    <title>PERFORMANCE SCHEDULE</title>
+    <title>ARTIST PROFILE</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
+<body>
+    <h1>MADISON MAE PARKER</h1>
+    <img src="images/Madison.jpg" />
+    <p>artist_statement</p>
+</body>
 <footer>
     <a href="index.html">MAP</a>
-    <br/>
+    <br />
     <small>&copy; 2019 Jessica Kincaid</small>
 </footer>
 
