added reset.css, styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <head>
     <title>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
