--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,8 @@
 
 <head>
     <title>ARTIST PROFILE</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
