--- a/schedule.html
+++ b/schedule.html
@@ -13,7 +13,8 @@
 
 <head>
     <title>PERFORMANCE SCHEDULE</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <footer>
