--- a/index.html
+++ b/index.html
@@ -22,48 +22,72 @@
             <h1>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</h1>
             <img src="images/MAP.png" />
         </header>
-        <main class="main-content">
-            <section class="mapMenu">
-                <ul class="dropdown">
-                    <li><a href="schedule.html">Schedule of Performances</a>
-                    </li>
-                    <li>Restrooms</li>
-                    <li>Children's Table</li>
-                    <li>Refreshments</li>
-                    <li>1 Katerina Guillermo</li>
-                    <li><a href="profile.html">2 Madison Mae Parker</a></li>
-                    <li>3 Jessica Ayala</li>
-                    <li>4 Sheri Hall</li>
-                    <li>6 Lavinia Roberts</li>
-                    <li>7 Kaia Nutting</li>
-                    <li>8 Kevin Kilroy</li>
-                    <li>9 Lilly McElroy</li>
-                    <li>10 Kiki Serna</li>
-                    <li>11 Jessica Kincaid</li>
-                    <li>12 Laurena Roytberg</li>
-                    <li>13 Jason Zeh</li>
-                    <li>14 Tristian Griffin</li>
-                    <li>15 Daniel Hogans</li>
-                    <li>16 KC Public Theatre</li>
-                    <li>17 Mazzy Mann</li>
-                    <li>18 JE Baker</li>
-                    <li>19 Fuko Ito</li>
-                    <li>20 Elizabeth Stehling</li>
-                    <li>21 Alicen Lundberg</li>
-                    <li>22 Luke Haynes</li>
-                    <li>23 Benjamin Wills</li>
-                    <li>24 Iliann Alvarez</li>
-                    <li>25 Elizabeth Derstine</li>
-                    <li>26 Ruben Castillo</li>
-                    <li>27 Bo Hubbard</li>
-                    <li>28 Nazanin Amiri</li>
 
-                </ul>
-            </section>
-        </main>
-    </div>
+        <body>
 
-    <footer><small>&copy; 2019 Jessica Kincaid</small></footer>
+            <button onclick="visitLocation()" class="dropbtn">Link to Schedule of Performances</button>
+            <div id="mapMenu" class="dropdown-content">
+                <a href="schedule.html">Schedule of Performances</a></li>
+                <a href="#Restrooms">Restrooms</a>
+                <a href="#childrens">Children's Table</a>
+                <a href="#refresh">Refreshments</a>
+            </div>
+            <button onclick="visitLocation()" class="dropbtn">Artists</button>
+            <div id="artistMenu" class="dropdown-content">
+
+                <li>1 Katerina Guillermo</li>
+                <li><a href="#profile.html">2 Madison Mae Parker</a></li>
+                <li>3 Jessica Ayala</li>
+                <li>4 Sheri Hall</li>
+                <li>6 Lavinia Roberts</li>
+                <li>7 Kaia Nutting</li>
+                <li>8 Kevin Kilroy</li>
+                <li>9 Lilly McElroy</li>
+                <li>10 Kiki Serna</li>
+                <li>11 Jessica Kincaid</li>
+                <li>12 Laurena Roytberg</li>
+                <li>13 Jason Zeh</li>
+                <li>14 Tristian Griffin</li>
+                <li>15 Daniel Hogans</li>
+                <li>16 KC Public Theatre</li>
+                <li>17 Mazzy Mann</li>
+                <li>18 JE Baker</li>
+                <li>19 Fuko Ito</li>
+                <li>20 Elizabeth Stehling</li>
+                <li>21 Alicen Lundberg</li>
+                <li>22 Luke Haynes</li>
+                <li>23 Benjamin Wills</li>
+                <li>24 Iliann Alvarez</li>
+                <li>25 Elizabeth Derstine</li>
+                <li>26 Ruben Castillo</li>
+                <li>27 Bo Hubbard</li>
+                <li>28 Nazanin Amiri</li>
+
+                <div>
+                </div>
+                <script>
+                    /* When the user clicks on the button, 
+                                                                                                                                            toggle between hiding and showing the dropdown content */
+                    function visitLocation() {
+                        document.getElementById("mapMenu").classList.toggle("show");
+                    }
+
+                    // Close the dropdown if the user clicks outside of it
+                    window.onclick = function(event) {
+                        if (!event.target.matches('.dropbtn')) {
+                            var dropdowns = document.getElementsByClassName("dropdown-content");
+                            var i;
+                            for (i = 0; i < dropdowns.length; i++) {
+                                var openDropdown = dropdowns[i];
+                                if (openDropdown.classList.contains('show')) {
+                                    openDropdown.classList.remove('show');
+                                }
+                            }
+                        }
+                    }
+                </script>
+        </body>
+        <footer><small>&copy; 2019 Jessica Kincaid</small></footer>
 
 </body>
 
