add edited map after creating sprites in Illustrator

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <body>
 
-            <img src="images/MAP.png" />
+            <img src="images/StudiosMap.png" />
             <div id="mainMenu">
                 <button onclick="visitLocation()" class="dropbtn">Locations</button>
                 <ul id="mapMenu" class="dropdown-content">
@@ -68,7 +68,7 @@
 
                 <script>
                     /* When the user clicks on the button, 
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        toggle between hiding and showing the dropdown content */
                     function visitLocation() {
                         document.getElementById("mapMenu").classList.toggle("show");
                     }
