--- a/index.html
+++ b/index.html
@@ -38,36 +38,53 @@
                     </defs>
                 </svg>
             </div>
-            <div id="mainMenu">
+            <div >
                 <button onclick="visitLocation()" class="dropbtn">Locations</button>
-                <ul id="mapMenu" class="dropdown-content">
+                <!-- <ul id="mapMenu" class="dropdown-content">
                     <li class="rest"><a href="#Restrooms">Restrooms</a></li>
                     <li class="sched"><a href="schedule.html">Live Schedule</a></li>
                     <li class="child"><a href="#childrens">Children's Table</a></li>
                     <li class="refresh"><a href="#refresh">Refreshments</a></li>
 
-                </ul>
-                <button onclick="visitArtist()" class="dropbtn">Artists</button>
-                <ul id="artistMenu" class="dropdown-content" class="sub-menu">
+                </ul> -->
 
-                    <li class="vis"><a href="#">1 Katerina Guillermo</a></li>
-                    <li class="write perf"><a href="profile.html">2 Madison Mae Parker</a></li>
-                    <li class="write perf"><a href="#">3 Jessica Ayala</a></li>
-                    <li class="write perf"><a href="#">4 Sheri Hall</a></li>
-                    <li class="write"><a href="#">6 Lavinia Roberts</a></li>
-                    <li class="perf"><a href="#">7 Kaia Nutting</a></li>
-                    <li class="write"><a href="#">8 Kevin Kilroy</a></li>
-                    <li class="vis"><a href="#">9 Lilly McElroy</a></li>
-                    <li class="vis"><a href="#">10 Kiki Serna</a></li>
-                    <li class="vis"><a href="#">11 Jessica Kincaid</a></li>
-                    <li class="vis"><a href="#">12 Laurena Roytberg</a></li>
-                    <li class="perf"><a href="#">13 Jason Zeh</a></li>
-                    <li class="perf"><a href="#">14 Tristian Griffin</a></li>
-                    <li class="perf"><a href="#">15 Daniel Hogans</a></li>
-                    <li class="perf"><a href="#">16 KC Public Theatre</a></li>
-                    <li class="perf"><a href="#">17 Mazzy Mann</a></li>
-                    <li class="vis"><a href="#">18 JE Baker</a></li>
-                    <li class="vis"><a href="#">19 Fuko Ito</a></li>
+            <form id="mainMenu">
+                <select name="location">
+                    <option value="rest"><a href="#Restrooms">Restrooms</a></option>
+                    <option value="sched"><a href="schedule.html">Live Schedule</a></option>
+                    <option value="child"><a href="#childrens">Children's Table</a></option>
+                    <option value="refresh"><a href="#refresh">Refreshments</a></option>
+                </select>
+            </form>
+                <button onclick="visitArtist()" class="dropbtn">Artists</button>
+
+                <select name="artist">
+                        <option value="vis"><a href="#">1 Katerina Guillermo</a></option>
+                        <option value="write perf"><a href="profile.html">2 Madison Mae Parker</a></option>
+                        <option value="write perf"><a href="#">3 Jessica Ayala</a></option>
+                        <option value="write perf"><a href="#">4 Sheri Hall</a></option>
+                        <option value="write"><a href="#">6 Lavinia Roberts</a></option>
+                        <option value="perf"><a href="#">7 Kaia Nutting</a></option>
+                        <option value="write"><a href="#">8 Kevin Kilroy</a></option>
+                        <option value="vis"><a href="#">9 Lilly McElroy</a></option>
+                        <option value="vis"><a href="#">10 Kiki Serna</a></option>
+                        <option value="vis"><a href="#">11 Jessica Kincaid</a></option>
+                        <option value="vis"><a href="#">12 Laurena Roytberg</a></option>
+                        <option value="perf"><a href="#">13 Jason Zeh</a></option>
+                        <option value="perf"><a href="#">14 Tristian Griffin</a></option>
+                        <option value="perf"><a href="#">15 Daniel Hogans</a></option>
+                        <option value="perf"><a href="#">16 KC Public Theatre</a></option>
+                        <option value="perf"><a href="#">17 Mazzy Mann</a></option>
+                        <option value="write"><a href="#">18 JE Baker</a></option>
+                        <option value="vis"><a href="#">19 Fuko Ito</a></option>
+                        <option value="child"><a href="#childrens">Children's Table</a></option>
+                        <option value="refresh"><a href="#refresh">Refreshments</a></option>
+                        <option value="child"><a href="#childrens">Children's Table</a></option>
+                        <option value="refresh"><a href="#refresh">Refreshments</a></option>
+                    </select>
+                <!-- <ul id="artistMenu" class="dropdown-content" class="sub-menu"> -->
+
+                   
                     <li class="vis"><a href="#">20 Elizabeth Stehling</a></li>
                     <li class="write"><a href="#">21 Alicen Lundberg</a></li>
                     <li class="vis"><a href="#">22 Luke Haynes</a></li>
