index through artists

--- a/studio-visitor-app/src/index.html
+++ b/studio-visitor-app/src/index.html
@@ -40,7 +40,7 @@
                 </defs>
                 </svg>
     </div>
-    <div id="mainMenu">
+    <div class="artist">
         
         <button onclick="visitArtist()" class="dropbtn">Artists</button>
         <ul id="artistMenu" class="dropdown-content" class="sub-menu">
