--- a/studio-visitor-app/src/index.html
+++ b/studio-visitor-app/src/index.html
@@ -22,7 +22,8 @@
 
 <body>
     <div id="root">
-        <header>
+
+        <!-- <header>
             <h1>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</h1>
             <span class="stats"></span>
         </header>
@@ -38,7 +39,7 @@
                         <!-- All the paths and shapes for map icons -->
                     </g>
                 </defs>
-                </svg>
+                </svg> 
     </div>
 <!--         
         <button onclick="visitArtist()" class="dropbtn">Artists</button>
