update root to display images

--- a/studio-visitor-app/public/index.html
+++ b/studio-visitor-app/public/index.html
@@ -1,22 +1,12 @@
-<!-----
-
-    Studio_visitor
-    React App
-
-    LiftOff Project
- 
-    Jessica Kincaid
-    March 24, 2019
----->
-
-
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -32,15 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-    <title>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link href="css/styles.css" rel="stylesheet" type="text/css" /> -->
-    <!-- <link href="css/StudiosMap.css" rel="stylesheet" type="text/css" /> -->
-    <link href="../src/App.css" rel="stylesheet"/>
-</head>
-
-<body>
+    <title>React App</title>
+  </head>
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -52,17 +36,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-   
-
-   
-
-    
-    <footer><small>&copy; 2019 Jessica Kincaid</small></footer>
-</body>
-
-</html> 
--->
-<footer><small>&copy; 2019 Jessica Kincaid</small></footer>
-</body>
-
-</html> 
+    -->
+  </body>
+</html>
