--- a/studio-visitor-app/public/index.html
+++ b/studio-visitor-app/public/index.html
@@ -1,38 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<html>
+<!-----
+
+    Studio_visitor
+
+    LiftOff Project
+ 
+    Jessica Kincaid
+    May 30, 2019
+---->
+
+<head>
+    <title>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+</head>
 
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<body>
+    <div id="container">
+        <header>
+            <h1>CHARLOTTE STREET FOUNDATION OPEN STUDIOS EVENT</h1>
+        </header>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Open Studios 2019</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+        <body>
+            
+            <div id="">
+                <div id="map">
+                    <img class="layout" src="images/StudiosMap.png">
+                </div>
+                <!--<button onclick="visitLocation()" class="dropbtn">Locations</button>
+                 <ul id="mapMenu" class="dropdown-content">
+                    <li class="rest"><a href="#Restrooms">Restrooms</a></li>
+                    <li class="sched"><a href="schedule.html">Live Schedule</a></li>
+                    <li class="child"><a href="#childrens">Children's Table</a></li>
+                    <li class="refresh"><a href="#refresh">Refreshments</a></li>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+                </ul> -->
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+            <!-- <form id="mainMenu">
+                <select name="location">
+                    <option value="rest"><a href="#Restrooms" style="background-color: aqua">Restrooms</a></option>
+                    <option value="sched"><a href="schedule.html" style="background-color: blue">Live Schedule</a></option>
+                    <option value="child"><a href="#childrens" style="background-color: green">Children's Table</a></option>
+                    <option value="refresh"><a href="#refresh" style="background-color: yellow">Refreshments</a></option>
+                </select>
+            </form> -->
+                <!-- <button onclick="visitArtist()" class="dropbtn">Artists</button> -->
+
+               
+                <ul id="artistMenu" class="dropdown-content" class="sub-menu"> 
+                    <li class="vis"><a href="#">1 Katerina Guillermo</a></li>
+                    <li class="write perf"><a href="profile.html">2 Madison Mae Parker</a></li>
+                    <li class="write perf"><a href="#">3 Jessica Ayala</a></li>
+                    <li class="write perf"><a href="#">4 Sheri Hall</a></li>
+                    <li class="write"><a href="#">6 Lavinia Roberts</a></li>
+                    <li class="perf"><a href="#">7 Kaia Nutting</a></li>
+                    <li class="write"><a href="#">8 Kevin Kilroy</a></li>
+                    <li class="vis"><a href="#">9 Lilly McElroy</a></li>
+                    <li class="vis"><a href="#">10 Kiki Serna</a></li>
+                    <li class="vis"><a href="#">11 Jessica Kincaid</a></li>
+                    <li class="vis"><a href="#">12 Laurena Roytberg</a></li>
+                    <li class="perf"><a href="#">13 Jason Zeh</a></li>
+                    <li class="perf"><a href="#">14 Tristian Griffin</a></li>
+                    <li class="perf"><a href="#">15 Daniel Hogans</a></option>
+                    <li class="perf"><a href="#">16 KC Public Theatre</a></option>
+                    <li class="perf"><a href="#">17 Mazzy Mann</a></option>
+                    <li class="write"><a href="#">18 JE Baker</a></option>
+                    <li class="vis"><a href="#">19 Fuko Ito</a></option>
+                    <li class="vis"><a href="#">20 Elizabeth Stehling</a></li>
+                    <li class="write"><a href="#">21 Alicen Lundberg</a></li>
+                    <li class="vis"><a href="#">22 Luke Haynes</a></li>
+                    <li class="vis"><a href="#">23 Benjamin Wills</a></li>
+                    <li class="vis"><a href="#">24 Iliann Alvarez</a></li>
+                    <li class="vis"><a href="#">25 Elizabeth Derstine</a></li>
+                    <li class="vis"><a href="#">26 Ruben Castillo</a></li>
+                    <li class="vis"><a href="#">27 Bo Hubbard</a></li>
+                    <li class="vis"><a href="#">28 Nazanin Amiri</a></li>
+                </ul>
+
+                <script>
+                    /* When the user clicks on the button, 
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    toggle between hiding and showing the dropdown content */
+                    function visitLocation() {
+                        document.getElementById("mapMenu").classList.toggle("show");
+                    }
+
+                    function visitArtist() {
+                        document.getElementById("artistMenu").classList.toggle("show");
+                    }
+
+                    // Close the dropdown if the user clicks outside of it
+                    window.onclick = function(event) {
+                        if (!event.target.matches('.dropbtn')) {
+                            var dropdowns = document.getElementsByClassName("dropdown-content");
+                            var i;
+                            for (i = 0; i < dropdowns.length; i++) {
+                                var openDropdown = dropdowns[i];
+                                if (openDropdown.classList.contains('show')) {
+                                    openDropdown.classList.remove('show');
+                                }
+                            }
+                        }
+                    }
+                </script>
+        </body>
+        <footer><small>&copy; 2019 Jessica Kincaid</small></footer>
+
+</body>
+
 </html>
