added images of artists

--- a/studio-visitor-app/public/index.html
+++ b/studio-visitor-app/public/index.html
@@ -7,7 +7,7 @@
     LiftOff Project
  
     Jessica Kincaid
-    May 30, 2019
+    June 4, 2019
 ---->
 
 <head>
@@ -24,7 +24,7 @@
 
         <body>
             
-            <div id="">
+            <div id="root">
                 <div id="map">
                     <img class="layout" src="images/StudiosMap.png">
                 </div>
